@@ -19,11 +19,6 @@ dependencies {
 
     //TODO Add jdbc driver imporbundlet here. Ex: implementation 'com.microsoft.sqlserver:mssql-jdbc:8.4.1.jre14'
     implementation group: 'com.databricks', name: 'databricks-jdbc', version: '2.6.33'
-//    implementation group: 'com.databricks', name: 'databricks-jdbc', version: '2.6.25'
-
-//    implementation group: 'com.databricks', name: 'databricks-jdbc', version: '2.6.25-1'
-//    implementation group: 'org.apache.camel', name: 'camel-jdbc', version: '4.0.0-M3'
-
 
     testImplementation testFixtures(project(':airbyte-integrations:connectors:source-jdbc'))
 
@@ -34,17 +29,7 @@ dependencies {
 
     implementation files(project(':airbyte-integrations:bases:base-java').airbyteDocker.outputs)
     integrationTestJavaImplementation files(project(':airbyte-integrations:bases:base-java').airbyteDocker.outputs)
-
-
-
-
-//    implementation project(':airbyte-db:db-lib')
-//    implementation project(':airbyte-config-oss:config-models-oss')
-//    implementation libs.airbyte.protocol
-//    implementation project(':airbyte-integrations:bases:base-java')
-//    implementation project(':airbyte-integrations:bases:base-java-s3')
-//    implementation files(project(':airbyte-integrations:bases:base-java').airbyteDocker.outputs)
-//    implementation project(':airbyte-integrations:bases:bases-destination-jdbc')
-//    implementation project(':airbyte-integrations:connectors:destination-s3')
-//    implementation project(':airbyte-integrations:connectors:destination-azure-blob-storage')
+}
+test {
+    jvmArgs = ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens=java.base/java.nio=ALL-UNNAMED']
 }
